1. admin side checkin screen cropped image in square is fixed 2. Text color on button while cropping the image is changed to white

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -446,3 +446,9 @@ div{
         color: $milife-blue;
     }
 }
+
+
+
+.btn_crop-save{
+  color: #fff;
+}
